--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="MWI Character Card Generator - 解析MWIT导出的JSON数据生成角色名片">
+    <meta name="description" content="MWI Character Card Generator - 解析MWI Tools导出的JSON数据生成角色名片">
     <meta name="author" content="Windoge">
     <title>MWI Character Card Generator By Windoge</title>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
@@ -515,7 +515,7 @@
     <div class="container">
         <div class="header">
             <h1>MWI Character Card Generator</h1>
-            <p>解析MWIT导出的JSON数据生成角色名片</p>
+            <p>解析MWI Tools导出的JSON数据生成角色名片</p>
         </div>
 
         <div class="input-section">
@@ -526,14 +526,14 @@
             </div>
             <div style="margin-bottom: 15px;">
                 <label for="characterIntro" style="display: block; margin-bottom: 5px; color: #4a90e2;">自我介绍 (选填，最多50字):</label>
-                <textarea id="characterIntro" placeholder="请输入自我介绍..." maxlength="50" style="width: 100%; padding: 10px; background: rgba(0, 0, 0, 0.3); border: 1px solid #4a90e2; border-radius: 8px; color: white; font-size: 14px; height: 80px; resize: none;"></textarea>
+                <textarea id="characterIntro" placeholder="请输入自我介绍..." maxlength="50" style="width: 100%; padding: 10px; background: rgba(0, 0, 0, 0.3); border: 1px solid #4a90e2; border-radius: 8px; color: white; font-size: 14px; height: 40px; resize: none;"></textarea>
                 <div style="text-align: right; margin-top: 5px; color: #4a90e2; font-size: 12px;">
                     <span id="introCount">0</span>/50
                 </div>
             </div>
             <div style="margin-bottom: 15px;">
-                <label for="jsonInput" style="display: block; margin-bottom: 5px; color: #4a90e2;">MWIT导出的JSON数据:</label>
-                <textarea id="jsonInput" placeholder="请粘贴MWIT导出的JSON数据..."></textarea>
+                <label for="jsonInput" style="display: block; margin-bottom: 5px; color: #4a90e2;">MWI Tools导出的JSON数据:</label>
+                <textarea id="jsonInput" placeholder="请粘贴MWI Tools导出的JSON数据..."></textarea>
             </div>
 
             <script>
@@ -561,7 +561,7 @@
 
         <div style="text-align: center; margin-top: 30px; padding: 20px; color: rgba(255, 255, 255, 0.6); font-size: 14px; border-top: 1px solid rgba(74, 144, 226, 0.2);">
             <p>Created by Windoge</p>
-            <p>Contact: <a href="mailto:254768511@qq.com" style="color: #4a90e2; text-decoration: none;">254768511@qq.com</a></p>
+            <p>If you find any bugs, please PM me in the game.</p>
         </div>
     </div>
 
