修改默认标题

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
 
     <div class="container">
         <div class="header">
-            <h1>MWI Character Card Generator</h1>
+            <h1>MWI 角色名片生成器</h1>
             <p>解析MWI Tools导出的JSON数据生成角色名片</p>
         </div>
 
